# lab-02-cache

./: .README.md.kate-swp  CMakeLists.txt  README.md
images/: graf
include/: experiment.hpp  investigation.h
sources/: experiment.cpp  investigation.cpp  main.cpp
